# Accordion_engine

./: CMakeLists.txt  README.md  common.h  main.cpp
Config/: ExecutionConfig.hpp  NodeTypeConfig.hpp  WebConfig.hpp
Connector/: ConnectorId.hpp  ConnectorPageSource.hpp  ConnectorPageSourceProvider.hpp  ConnectorPartitioningHandle.hpp  ConnectorTableHandle.hpp  PageSourceManager.hpp  SystemPageSourceProvider.hpp  TpchTableHandle.hpp
DataSource/: CSVCacheableTableReader.hpp  CSVOnceTableReader.hpp  CSVTableReader.hpp  DataFileDicts.hpp  SchemaManager.hpp  TpchAutoGenPageSource.hpp  TpchPageSource.hpp  dataLoader.hpp
DataSource/tpch/: TpchGen.cpp  TpchGen.h  TpchTableGen.hpp
Descriptor/: AggregateDescriptor.hpp  AggregationDescriptor.hpp  CrossJoinDescriptor.hpp  FieldDesc.hpp  FilterDescriptor.hpp  LookupJoinDescriptor.hpp  ProjectDescriptor.hpp  SortDescriptor.hpp  TableScanDescriptor.hpp  TaskBufferOpRequest.hpp  TaskUpdateRequest.hpp  TopKDescriptor.hpp
Descriptor/TaskInterfere/: TaskBufferOperatingRequest.hpp  TaskInterfereRequest.hpp  TaskInterfereRequestSerial.hpp  TaskIntraParaUpdateRequest.hpp
Execution/: StateMachine.hpp
Execution/Buffer/: BroadcastOutputBuffer.hpp  BroadcastOutputBufferManager.hpp  BufferInfoDescriptor.hpp  ClientBuffer.hpp  LazyOutputBuffer.hpp  OutputBuffer.hpp  OutputBufferInfo.hpp  OutputBufferManager.hpp  OutputBufferSchema.hpp  OutputPartitioningBufferManager.hpp  ShuffleStageBufferManager.hpp  SimpleOutputBuffer.hpp  SimpleOutputBufferManager.hpp  SimpleShuffleStageBuffer.hpp  SimpleShuffleStageBufferManager.hpp
Execution/Event/: Event.h  SimpleEvent.hpp
Execution/Scheduler/: NormalStageScheduler.hpp  SourcePartitionedScheduler.hpp  SqlQueryExecution.hpp  SqlQueryScheduler.hpp  SqlStageExecution.hpp  SqlStageExecutionStateMachine.hpp  StageExecutionAndScheduler.hpp  StageLinkage.hpp  StageScheduler.hpp  StageTreeExecutionFactory.hpp
Execution/Task/: LogicalPipelineRunner.hpp  RemoteTask.hpp  RemoteTaskFactory.hpp  ScheduledSplit.hpp  SplitRunner.hpp  SqlTask.hpp  SqlTaskExecution.hpp  SqlTaskExecutionFactory.hpp  TaskHandle.hpp  TaskInfo.hpp  TaskManager.hpp  TaskResource.hpp  TaskSource.hpp  TaskStateMachine.hpp  TaskStatus.hpp  TasksRuntimeStats.hpp
Frontend/: AstCleaner.hpp  AstParser.hpp  AstViewer.hpp  FrontEnd.cpp  FrontEnd.h  RowExpressionToAstExpression.hpp  SqlParser.hpp
Frontend/Analyzer/: AggregationAnalyzer.hpp  Analysis.hpp  BuildInFunctionMetas.hpp  CatalogSchemaName.hpp  ExceptionCollector.hpp  ExpressionAnalysis.hpp  ExpressionAnalyzer.hpp  Field.hpp  FieldId.hpp  FieldReference.hpp  FunctionAndTypeResolver.hpp  FunctionCallMeta.hpp  FunctionMetaData.hpp  FunctionMetadataManager.hpp  QualifiedObjectName.hpp  RelationId.hpp  RelationType.hpp  Scope.hpp  Signature.hpp  StandardTypes.cpp  StandardTypes.h  StandardTypes.hpp  StatementAnalyzer.hpp  Type.hpp  TypeAllocator.hpp  TypeSignature.hpp
Frontend/AstNodes/: AllColumns.h  AstExceptionCollector.hpp  AstNodeAllocator.hpp  AstNodePtr.hpp  AstNodeVisitor.h  AstTreeCleaner.hpp  DefaultAstExpressionVisitor.hpp  DefaultAstNodeVisitor.hpp  ExprOutput.hpp  GroupBy.h  GroupingElement.h  IsDistinct.h  Node.h  Offset.h  OrderBy.h  Query.h  QuerySpecification.h  Select.h  SelectItem.h  SimpleGroupBy.hpp  SingleColumn.h  SortItem.h  tree.h
Frontend/Optimizations/: AddDistributedAggregation.hpp  AddExchange.hpp  AddTaskOutput.hpp  EliminateEmptyProject.hpp  EliminateRedundantProject.hpp  OptimizeOutputProject.hpp  PlanOptimizer.h  PruneJoinRedundantColumns.hpp  PushDownPredicates.hpp  SimplePlanNodeRewriter.hpp
Frontend/Optimizer/: Optimizer.hpp
Frontend/PlanNode/: AggregationNode.hpp  CrossJoinNode.hpp  (+23 more)
NodeCluster/: Heartbeat.hpp  Node.hpp  NodeSelector.hpp  NodesManager.cpp  NodesManager.h
Operators/: FilterOperator.hpp  FinalAggregationOperator.hpp  HashBuilderOperator.hpp  LimitOperator.hpp  LocalExchangeSinkOperator.hpp  LocalExchangeSourceOperator.hpp  LookupJoinOperator.hpp  NestedLoopBuildOperator.hpp  NestedLoopJoinOperator.hpp  Operator.hpp  PartialAggregationOperator.hpp  ProjectOperator.hpp  RemoteSourceOperator.hpp  SortOperator.hpp  TableScanOperator.hpp  TaskOutputOperator.hpp  TopKOperator.hpp
Page/: Channel.hpp  DataPage.hpp  DataPageBuilder.hpp
Partitioning/: NodePartitionMap.hpp  NodePartitioningManager.hpp  Partitioning.hpp  PartitioningHandle.hpp  PartitioningHandleSerializer.hpp  PartitioningScheme.hpp  SystemPartitioningHandle.cpp  SystemPartitioningHandle.h
Pipeline/: PhysicalPipeline.hpp
Planner/: Fragment.hpp  Fragmenter.hpp  PlanTreeAnalyzer.hpp
Prediction/: ClusterContext.hpp  PPM.hpp  PPM_TEMP
ProjectorAndFilter/: ArrowExprNode.hpp  ExprAstFilter.hpp  ExprAstFilterComplier.hpp  ExprAstProjector.hpp  ExprAstProjectorComplier.hpp
Query/: QueryManager.hpp  QueryStateMachine.hpp  RegQuery.h
Script/: Instruction.hpp  InstructionExecutor.hpp  InstructionInterpreter.hpp  Script.hpp  ScriptExecutionContext.hpp  ScriptExecutor.hpp  ScriptParser.hpp  ScriptQueryMonitor.hpp  SimpleLexer.hpp  SimpleParser.hpp  SimpleToken.hpp
Session/: RuntimeConfigParser.hpp  Session.hpp  SessionRepresentation.hpp
Shell/: Shell.hpp
Split/: ConnectorSplit.hpp  RemoteSplit.hpp  Split.hpp  SplitSourceFactory.hpp  SystemSplit.hpp  TpchAutoGenSplit.hpp  TpchSplit.hpp  WebLocation.hpp
System/: ClusterServer.cpp  ClusterServer.h  QueryServer.hpp  System.hpp  TaskServer.cpp  TaskServer.h  TaskServer.hpp
Tuning/: AutoTunePlanConfig.hpp  AutoTunerManager.hpp  ParallelismAutoTuner.hpp  ProgressAndTuner.hpp
Utils/: ArrowArrayBuilder.hpp  ArrowDicts.hpp  ArrowFunctionOptionsSupplier.hpp  ArrowRecordBatchViewer.hpp  BlockQueue.hpp  FileCommon.hpp  HashCommon.hpp  RW_BlockQueue.hpp  Random.hpp  SafeMap.hpp  StringUtils.hpp  TextColor.h  ThreadPool.cpp  ThreadPool.h  TimeCommon.hpp  Timer.hpp  TypeUtils.hpp  UUID.hpp  WebCommon.hpp  gandivaDicts
Web/: ClusterInterface.hpp  QueryInterface.hpp  TaskServerInferface.hpp
accordion/: DataFileDicts  copy.sh  execution.config  httpconfig.config  run.sh  script  startcluster.sh  stopcluster.sh  userpasswd
(+304 files in other folders)
